Revert previous change that suppressed scrollbar and added an extra 3px where they were required to stop it happening instead.

--- a/client/Components/GameBoard/GameBoard.scss
+++ b/client/Components/GameBoard/GameBoard.scss
@@ -6,7 +6,7 @@
 
 .game-board {
     position: absolute;
-    bottom: 0;
+    bottom: 3px;
     left: 0;
     right: 0;
     top: $navbar-height;
