--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -30,7 +30,7 @@ body {
     top: 0;
     bottom: 0;
 
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 a {
